--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
 
   <app-search-bar (searchTextChange)="onSearchTextChange($event)"></app-search-bar>
   <app-filter-selector (filterTypeChange)="onFilterTypeChange($event)"></app-filter-selector>
-  <app-data-table [dataUser]="FilteredUsers"></app-data-table>
+  <app-data-table [dataUser]="users"></app-data-table>
 </div>
